feat(authorization): 重构模型结构定义 (feature-acl-ddd-rebac-260308)
移除旧的 AddRelationCommand、AddTypeDefinitionCommand 以及相关的 DTO 和 ApplicationService 实现。
引入新的 AuthorizationModelStructure，聚合类型、关系、条件定义，提供统一的结构化管理。
更新 API 层请求和响应结构，采用 Map-keyed schema 定义，简化模型创建和展示。
重构模型创建流程，统一使用 Schema 模式，提升模型定义的灵活性和可维护性。